--- a/devOps_Agile_NoSQL/ttwst-jhxyb-ci-cd-pipeline_js/labs/01_base_pipeline/tasks.yaml
+++ b/devOps_Agile_NoSQL/ttwst-jhxyb-ci-cd-pipeline_js/labs/01_base_pipeline/tasks.yaml
@@ -1,11 +1,32 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: hello-world
+  name: echo
 spec:
+  params:
+    - name: message
+      type: string
+      description: Message to echo
   steps:
-    - name: echo
+    - name: echo-message
       image: alpine:3
       command: [/bin/echo]
-      args: ["Hello World"]
-
+      args: ["$(params.message)"]
+---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: checkout
+spec:
+  params:
+    - name: repo-url
+      type: string
+      description: URL of git repo to clone
+    - name: branch
+      type: string
+      description: Branch to clone
+  steps:
+    - name: checkout
+      image:  bitnami/git:latest
+      command: [git]
+      args: ["clone", "--branch", "$(params.branch)", "$(params.repo-url)",]
